# storage_server

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Dockerfile  Rocket.toml  readme.md
.cargo/: config.toml
back/: Cargo.toml
back/src/: cache.rs  catchers.rs  error.rs  main.rs  response.rs  routes.rs
back/src/cache/: data.rs  duplicates.rs  entry.rs  fs.rs  metadata.rs  size.rs  upload_info.rs
back/src/routes/: dashboard.rs  delete.rs  download.rs  info.rs  upload.rs
examples/: download.sh  example.py  generate_sample.sh  out.json  parse.py
examples/assets/: file.txt
front/: Cargo.toml  build.rs
front/src/: app.rs  lib.rs  main.rs  utils.rs
front/src/component/: light_switch.rs  mod.rs  notification.rs
front/src/scene/: contatct.rs  dashboard.rs  download.rs  home.rs  mod.rs  not_found.rs  upload.rs
scripts/: build.sh  build_back.sh  build_front.sh  clean.sh  clean_back.sh  clean_front.sh  concat.py  container_build.sh  docker_build.sh  gen_dummy.py  init.sh  run.sh  watch_back.sh  watch_front.sh
shared/: Cargo.toml
shared/src/: data.rs
static/: front.js  front_bg.wasm  index.html
static/css/: contact.css  home.css  notification.css  style.css  theme.css  upload.css
static/lib/live/: live.js
static/lib/zoom/: zoom.css  zoom.js
temp/a/: E.txt
test/: w.txt
