[workspace]
resolver = "2"
members = [
    "back",
    "front",
]
exclude = [
]

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
time = { git = "https://github.com/Bowarc/Crates.git", package = "time" }
serde = { version = "1.0.194", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "zerocopy", "serde"] }
