[package]
name = "back"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "storage_server"
path = "src/main.rs"

[dependencies]
rbase64 = "2.0.3"
rocket = { version = "0.5.0", features = ["json"] }
uuid.workspace = true
logger = { git = "https://github.com/Bowarc/Crates.git", package = "logger" }
time.workspace = true
log = "0.4.20"
brotli = "3.4.0"
regex = "1.10.2"
thiserror = "1.0.51"
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
shared = { path = "../shared"}
lazy_static = "1.5.0"
