[package]
name = "back"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "storage_server"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
uuid.workspace = true
logger = { git = "https://github.com/Bowarc/Crates.git", package = "logger" }
time.workspace = true
log = "0.4.20"
regex = "1.10.2"
thiserror = "2.0.11"
futures = { version = "0.3.30", default-features = false, features = ["async-await"]}
lazy_static = "1.5.0"
serde.workspace = true
zstd = "0.13.2"
tokio-util = { version = "0.7.13", default-features = false, features = ["compat"] }
