[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "front"
path = "src/main.rs"

[dependencies]
shared = { path ="../shared" }
time.workspace = true
gloo = "0.10.0" # Yew depends on this version
js-sys = "0.3.68"
yew = { version = "0.21.0", features = ["csr"] } # csr allows access to yew::Renderer
wasm-bindgen = { version = "0.2.92"}
wasm-bindgen-futures = "0.4.41"
# wasm-timer = "0.2.5"
serde_json = "1.0.111"
serde.workspace = true
futures = "0.3.30"
gloo-timers = { version = "0.3.0", features = ["futures"] }
base64 = "0.22.1"


[dependencies.web-sys]
version = "0.3.68"
features = [
  # 'HtmlCanvasElement',
  # 'WebGlBuffer',
  # 'WebGlProgram',
  # 'WebGlRenderingContext',
  # 'WebGlShader',
  # 'WebGlUniformLocation',
  "File",
  "DragEvent",
  "DataTransfer"
]
