[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "front"
path = "src/main.rs"

[build-dependencies]
toml = "0.8.19"

[dependencies]
time.workspace = true
gloo = "0.11.0" # Yew depends on this version
js-sys = "0.3.70"
yew = { version = "0.21.0", features = ["csr"] } # csr allows access to yew::Renderer
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
# wasm-timer = "0.2.5"
serde_json = "1.0.124"
serde.workspace = true
futures = "0.3.30"
gloo-timers = { version = "0.3.0", features = ["futures"] }
uuid.workspace = true
mem = { git = "https://github.com/bowarc/crates", package = "mem" }


[dependencies.web-sys]
version = "0.3.70"
features = [
  # 'HtmlCanvasElement',
  # 'WebGlBuffer',
  # 'WebGlProgram',
  # 'WebGlRenderingContext',
  # 'WebGlShader',
  # 'WebGlUniformLocation',
  "File",
  "DragEvent",
  "DataTransfer",

  # clipboard access (not working)
  "Window",
  "Navigator",
  "Clipboard",

  # clipboard access 2, exec command
  "HtmlDocument",
  # "Element"  # set class name (for css)
  "HtmlTextAreaElement" # The select method on text area
]
